force-app/main/default/objects/Card_Transaction__c/Card_Transaction__c.object-meta.xml
<CustomObject>
    <label>Card Transaction</label>
    <nameField>
        <label>Transaction Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Card Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>