force-app/main/default/objects/Card_Transaction__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Card Transactions</relationshipLabel>
    <relationshipName>Card_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>