force-app/main/default/objects/Card_Transaction__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>