force-app/main/default/objects/Card_Transaction__c/fields/Full_PAN__c.field-meta.xml
<CustomField>
    <fullName>Full_PAN__c</fullName>
    <label>Full PAN</label>
    <length>19</length>
    <type>Text</type>
</CustomField>