force-app/main/default/objects/Card_Transaction__c/fields/PAN_Last_Four__c.field-meta.xml
<CustomField>
    <fullName>PAN_Last_Four__c</fullName>
    <label>PAN Last Four</label>
    <length>4</length>
    <type>Text</type>
</CustomField>